# llm-entity-extractor

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_entity_extractor/: __init__.py
